# ragent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .testcontainers.properties.example  AGENT.md  CLAUDE.md  Dockerfile  Dockerfile.es-test  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: post_test_capture.sh  pre_commit_gate.sh  pre_push_gate.sh  session_start.sh  stamp_approval.sh  stamp_pre_commit_approved.sh
.github/workflows/: pr_agent_gemini.yml  pythonci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_ingest_v2.py  003_drop_chunks.py  004_documents_mime_type.py  005_rename_source_workspace_to_source_meta.py  006_documents_error_code.py  007_widen_mime_type.py  008_documents_id.py  009_system_settings.py  010_feedback.py
config/: quality_validation.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  reconciler-cronjob.yaml  vaultsecret.yaml
deploy/prometheus/: alerts.yaml
docs/: 00_agent_team.md  00_domain_map.md  00_journal.md  00_plan.md  00_plan_done.md  00_rule.md  00_rule_third_party_api.md  00_spec.md  API.md  ARCHITECTURE.md  chat_intent_matrix.md  chatagent_agent_backend.md  chatagent_v3_attachments_flow.md  rule.md
docs/spec/: chat_attachments.md  chatagent_v3.md  data_structures.md  dependency_rules.md  endpoints.md  env_vars.md  error_codes.md  mcp_server.md  twp_ai.md
docs/team/: 2026_05_03_phase1_kickoff.md  2026_05_04_phase1_review.md  2026_05_04_phase1_round2_crud.md  2026_05_04_phase1_round3_reorg_auth_off.md  2026_05_04_phase1_round4_supersede_uid_review.md  2026_05_05_phase4_memory_kickoff.md  2026_05_05_phase4_memory_round3_doc_review.md  2026_05_05_structlog_logging.md  2026_05_06_aiomysql_adoption.md  2026_05_06_ast_chunking_dual_field.md  2026_05_06_ingest_api_v2.md  2026_05_06_inline_content_ingest.md  2026_05_06_mime_aware_converters.md  2026_05_06_phase4_memory_round4_external_review.md  2026_05_06_taskiq_dispatcher.md  2026_05_07_revision_model_proposal.md  2026_05_15_embedding_model_lifecycle.md
migrations/: 002_ingest_v2.sql  004_documents_mime_type.sql  004_rename_source_workspace_to_source_meta.sql  008_documents_id.sql  009_feedback.sql  009_system_settings.sql  010_feedback.sql  011_ingest_type_upload.sql  013_chat_attachments.sql  014_chat_attachments.sql  015_chat_artifact_ast_type_to_variant.sql  015_chat_attachment_artifacts_content_type.sql  016_drop_chat_attachment_artifacts_fk.sql  schema.sql
resources/es/: chunks_v1.json  feedback_v1.json
scripts/: app_doctor.py  gen_attachment_keys.py  test-e2e-golden.ps1
src/ragent/: __init__.py  api.py  config.py  reconciler.py  worker.py
tests/: conftest.py  helpers.py  tc_utils.py
tests/e2e/: conftest.py  golden_set.jsonl  test_chaos_worker_kill.py  test_golden_set.py  test_ingest_multiversion_supersede.py  test_ingest_success_rate.py  test_ingest_v2_golden.py
tests/integration/: _alembic_utils.py  test_alerting_rules.py  test_app_factory.py  test_attachments_router.py  test_bootstrap_auto_init.py  test_chat_endpoint.py  test_chat_failure_paths.py  test_chat_pipeline_retrieval.py  test_chat_rate_limit.py  test_chat_stream_endpoint.py  test_chatagent_endpoint.py  test_chatagent_v2_endpoint.py  test_chatagent_v3_endpoint.py  test_composition_root.py  test_csv_row_merger.py  test_embedding_lifecycle_e2e.py  test_es_plugin_required.py  test_es_resource_drift.py  test_feedback_loop.py  test_health_endpoints.py  (+19 more)
(+295 files in other folders)
