[project]
name = "ragent"
version = "0.1.0"
description = "Distributed RAG Agent System (Phase 1 skeleton)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "pymysql>=1.1.3",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "taskiq>=0.12.2",
    "taskiq-redis>=1.2.2",
    "uuid-utils>=0.9",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "safety>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "testcontainers[elasticsearch,mariadb,minio,redis]>=4.14.2",
]
